--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
       }
     </script>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.3.1",
@@ -68,13 +68,15 @@
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
     "framer-motion": "https://esm.sh/framer-motion@11.11.17?external=react,react-dom",
     "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react,react-dom",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
-    "react/": "https://esm.sh/react@18.3.1/"
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-black text-white antialiased overflow-x-hidden">
     <div id="root"></div>
+    <!-- Entry Point Script -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
